chore: port to Minecraft 1.20.1 (Fabric API 0.92.3+1.20.1)
- Update minecraft_version to 1.20.1, loader to 0.15.11, fabric_version to 0.92.3+1.20.1, java_version to 17
- Rewrite SpyglassConfigScreen using Screen (OptionsSubScreen API differs in 1.20.1)
- Fix Math.clamp → Math.min/max (Math.clamp requires Java 21+)
- Fix InGameHudMixin: renderHotbarAndDecorations → renderHotbar; renderCameraOverlays → render for @ModifyArg target

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>